--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <!--Google font-->
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fontdiner+Swanky&family=Roboto:ital,wght@0,400;0,700&family=Fondamento&display=swap" rel="stylesheet">
+  
+  <!--Icon-->
+  <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
 
   <!--Bootstrap-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
